<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:Android="http://schemas.android.com/tools"
    android:background="#4121D4F3"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="137dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        app:srcCompat="@drawable/ic_launcher_background" />

    <FrameLayout
        android:layout_width="279dp"
        android:layout_height="331dp"
        android:layout_gravity="center"
        android:background="@drawable/rounded_frame_layout"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="331dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txtName"
                style="@style/viewCustom"
                android:hint="@string/firstName"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txtLastName"
                style="@style/viewCustom"
                android:hint="@string/lastName"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txtEmail"
                style="@style/viewCustom"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/txtPassword"
                style="@style/viewCustom"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/google_button"
                android:layout_width="74dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:padding="8dp"
                android:onClick="setupUI"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

    </FrameLayout>

</LinearLayout>