<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#4121D4F3"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="137dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            app:srcCompat="@drawable/ic_launcher_background" />

        <FrameLayout
            android:layout_width="279dp"
            android:layout_height="333dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_frame_layout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="353dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/etEmail"
                    style="style/viewCustom"
                    android:layout_width="204dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/etPassword"
                    style="@style/viewCustom"
                    android:layout_width="204dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="224dp"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btnLogin"
                        style="@style/viewCustom"
                        android:layout_width="160dp"
                        android:layout_gravity="center"
                        android:background="@drawable/rounded_frame_button"
                        android:onClick="login"
                        android:text="@string/login"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        tools:ignore="OnClick" />

                    <Button
                        android:id="@+id/create"
                        style="@style/viewCustom"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/rounded_frame_button"
                        android:onClick="register"
                        android:text="@string/createAct"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        tools:ignore="OnClick" />

                    <TextView
                        android:id="@+id/txtForgotPassword"
                        style="@style/viewCustom"
                        android:layout_width="100dp"
                        android:layout_below="@id/btnLogin"
                        android:layout_gravity="center"
                        android:gravity="center_horizontal"
                        android:onClick="forgotPassword"
                        android:text="@string/forgotPassword"
                        android:textSize="18sp"
                        tools:ignore="OnClick" />

                </LinearLayout>

            </LinearLayout>

        </FrameLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>